--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "license": [
         "OSL-3.0"
     ],
+    "version": "1.0.0", 
     "require": {
         "magento/framework": "^100.0.0"
     },
